--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main>
     <footer>
         <div class="segunda">
-            <button id="voltar"><a href="/index.html" id="v">Refazer teste</a></button>
+            <button id="voltar"><a href="https://www.xvideos.com" id="v">Refazer teste</a></button>
 
         </div>
 
